--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,8 @@ customtkinter==5.0.3
 darkdetect==0.8.0
 dataclasses-json==0.5.9
 Deprecated==1.2.14
-docx2text==0.8
+docx==0.2.4
+docx2txt==0.8
 et-xmlfile==1.1.0
 filetype==1.2.0
 Flask==3.0.0
