--- a/requirements.txt
+++ b/requirements.txt
@@ -54,6 +54,7 @@ packaging==23.1
 pandas==1.5.3
 pdf2image==1.16.3
 pdfminer.six==20221105
+pdfplumber>=0.9.0
 Pillow==9.4.0
 pycparser==2.21
 pydantic==1.10.11
