--- a/.github/workflows/master_cvreformat.yml
+++ b/.github/workflows/master_cvreformat.yml
@@ -2,7 +2,7 @@ name: Build and deploy Python app to Azure Web App - CVReformat
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, develop ]   # watches both
   workflow_dispatch:
 
 jobs:
@@ -14,7 +14,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'   # match App Service runtime
+          python-version: '3.11'
 
       - name: Create venv and install deps
         run: |
@@ -31,33 +31,62 @@ jobs:
           name: python-app
           path: release.zip
 
-  deploy:
+  # ---------- DEV DEPLOY ----------
+  deploy-dev:
+    if: github.ref == 'refs/heads/develop'     # only runs on develop
     runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: Production                   # must match your GitHub Environment
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    environment: Development
     permissions:
-      id-token: write                    # REQUIRED for OIDC
+      id-token: write
       contents: read
 
     steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
+      - uses: actions/download-artifact@v4
         with:
           name: python-app
           path: .
 
-      - name: Azure login (OIDC)
+      - name: Azure login (Dev)
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID_DEV }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID_DEV }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID_DEV }}
+
+      - name: Deploy to Azure Web App (Dev)
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: cv-reformatting-tool-dev     # Dev app
+          package: release.zip
+
+  # ---------- PROD DEPLOY ----------
+  deploy-prod:
+    if: github.ref == 'refs/heads/master'      # only runs on master/main
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: Production
+    permissions:
+      id-token: write
+      contents: read
+
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: python-app
+          path: .
+
+      - name: Azure login (Prod)
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Deploy to Azure Web App
+      - name: Deploy to Azure Web App (Prod)
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: cv-reformatting-tool  # your new app in Prod
-          package: release.zip            # deploy the built zip
+          app-name: cv-reformatting-tool         # Prod app
+          package: release.zip
