--- a/.github/workflows/master_cvreformat.yml
+++ b/.github/workflows/master_cvreformat.yml
@@ -4,35 +4,44 @@ on:
   push:
     branches: [ master, develop ]
   workflow_dispatch:
+    inputs:
+      target:
+        description: "Which environment to deploy to?"
+        required: false
+        default: "develop"   # so manual runs go to dev first
+        type: choice
+        options:
+          - develop
+          - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-
       - name: Create venv and install deps
         run: |
           python -m venv venv
           source venv/bin/activate
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
       - name: Zip artifact for deployment
         run: zip -r release.zip . -x "venv/*"
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
           name: python-app
           path: release.zip
 
+  # ---------- DEV DEPLOY ----------
   deploy-dev:
-    if: github.ref == 'refs/heads/develop'
+    # run if:
+    # 1) this was a push to develop  OR
+    # 2) this was a manual run and user chose "develop"
+    if: >
+      github.ref == 'refs/heads/develop' ||
+      (github.event_name == 'workflow_dispatch' && github.event.inputs.target == 'develop')
     runs-on: ubuntu-latest
     needs: build
     environment: Development
@@ -56,12 +65,17 @@ jobs:
           app-name: cv-reformatting-tool-dev
           package: release.zip
 
+  # ---------- PROD DEPLOY ----------
   deploy-prod:
-    if: github.ref == 'refs/heads/master'
+    # run if:
+    # 1) this was a push to master  OR
+    # 2) this was a manual run and user chose "master"
+    if: >
+      github.ref == 'refs/heads/master' ||
+      (github.event_name == 'workflow_dispatch' && github.event.inputs.target == 'master')
     runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: Production
+    environment: Production
     permissions:
       id-token: write
       contents: read
@@ -77,7 +91,6 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       - name: Deploy to Azure Web App (Prod)
-        id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: cv-reformatting-tool
