--- a/.github/workflows/master_cvreformat.yml
+++ b/.github/workflows/master_cvreformat.yml
@@ -2,7 +2,7 @@ name: Build and deploy Python app to Azure Web App - CVReformat
 
 on:
   push:
-    branches: [ master, develop ]
+    branches: [ master, Development ]
   workflow_dispatch:
     inputs:
       target:
@@ -44,7 +44,7 @@ jobs:
       (github.event_name == 'workflow_dispatch' && github.event.inputs.target == 'develop')
     runs-on: ubuntu-latest
     needs: build
-    environment: Development
+    environment: develop
     permissions:
       id-token: write
       contents: read
@@ -95,3 +95,4 @@ jobs:
         with:
           app-name: cv-reformatting-tool
           package: release.zip
+
