--- a/.github/workflows/master_cvreformat.yml
+++ b/.github/workflows/master_cvreformat.yml
@@ -2,91 +2,96 @@ name: Build and deploy Python app to Azure Web App - CVReformat
 
 on:
   push:
-    branches: [ master, develop ]   # watches both
+    branches: [ master, Development ]
   workflow_dispatch:
+    inputs:
+      target:
+        description: "Which environment to deploy to?"
+        required: false
+        default: "Development" 
+        type: choice
+        options:
+          - Development
+          - Production
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-
       - name: Create venv and install deps
         run: |
           python -m venv venv
           source venv/bin/activate
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
       - name: Zip artifact for deployment
         run: zip -r release.zip . -x "venv/*"
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
           name: python-app
           path: release.zip
 
   # ---------- DEV DEPLOY ----------
   deploy-dev:
-    if: github.ref == 'refs/heads/develop'     # only runs on develop
+    # run if:
+    # 1) push to Development branch
+    # 2) OR manual run choosing "Development"
+    if: >
+      github.ref == 'refs/heads/Development' ||
+      (github.event_name == 'workflow_dispatch' && github.event.inputs.target == 'Development')
     runs-on: ubuntu-latest
     needs: build
-    environment: Development
+    environment: Development            # <-- the GitHub env
     permissions:
       id-token: write
       contents: read
-
     steps:
       - uses: actions/download-artifact@v4
         with:
           name: python-app
           path: .
-
       - name: Azure login (Dev)
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID_DEV }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID_DEV }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID_DEV }}
-
       - name: Deploy to Azure Web App (Dev)
         uses: azure/webapps-deploy@v3
         with:
-          app-name: cv-reformatting-tool-dev     # Dev app
+          app-name: cv-reformatting-tool-dev   # Dev app
           package: release.zip
 
   # ---------- PROD DEPLOY ----------
   deploy-prod:
-    if: github.ref == 'refs/heads/master'      # only runs on master/main
+    # run if:
+    # 1) push to master
+    # 2) OR manual run choosing "Production"
+    if: >
+      github.ref == 'refs/heads/master' ||
+      (github.event_name == 'workflow_dispatch' && github.event.inputs.target == 'Production')
     runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: Production
+    environment: Production
     permissions:
       id-token: write
       contents: read
-
     steps:
       - uses: actions/download-artifact@v4
         with:
           name: python-app
           path: .
-
       - name: Azure login (Prod)
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-
       - name: Deploy to Azure Web App (Prod)
-        id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: cv-reformatting-tool         # Prod app
+          app-name: cv-reformatting-tool      # Prod app
           package: release.zip
